--- a/IsEmirleri.Web/Views/Mission/Index.cshtml
+++ b/IsEmirleri.Web/Views/Mission/Index.cshtml
@@ -98,10 +98,13 @@
                         <div class="mt-3">
                             <h6><i class="bx bx-chat"></i> Yorumlar</h6>
                                 <p id="comments" ></p>
-                            <textarea class="form-control" id="newComment" placeholder="Yorum Yazınız"></textarea>
-                            <button class="btn btn-primary btn-sm" id="btnAddComment">Yorum Ekle</button>
+                            <textarea class="form-control" id="newComment" placeholder="Yorum Yazınız" required></textarea>
                             <div class="card border border-primary">
                             </div>
+                            <div class="text-end">
+                                <button class="btn btn-primary btn-sm " id="btnAddComment" >Yorum Ekle</button>
+                            </div>
+
                         </div>
                     </div>
                     <div class="col-lg-4 right-panel">
@@ -236,7 +239,7 @@
                                              <div class="border p-4 rounded">
                                              <div class="border-bottom pb-3">
                                              
-                                              <p class="text-muted mb-4 font-size-15 comment-description">${comment.description || 'Yorum içeriği yok'}</p>
+                                              <p class="text-muted mb-4 font-size-15 comment-description">${comment.description}</p>
                                               <div class="d-flex align-items-start">
                                               <div class="flex-grow-1 d-flex justify-content-between">
                                                     <h5 class="font-size-13 mb-0">${comment.user.email}</h5>
@@ -344,14 +347,15 @@
                 dataType: 'json',
                 data: JSON.stringify(comment),
                 success: function (res) {
+                    $("#newComment").val("");
                     let commentsText = "";
-                    for (var comment of res.comments) {
-                        commentsText += `
+                        for (var comment of res.comments) {
+                            commentsText += `
                                       <div class="mt-4">
                                      <div class="border p-4 rounded">
                                      <div class="border-bottom pb-3">
-                                             <p class="float-sm-end text-muted font-size-13">${formatCommentDate(comment.dateCreated)}</p>
-                                      <p class="text-muted mb-4 font-size-15 comment-description">${comment.description || 'Yorum içeriği yok'}</p>
+                                     <p class="float-sm-end text-muted font-size-13">${formatCommentDate(comment.dateCreated)}</p>
+                                      <p class="text-muted mb-4 font-size-15 comment-description">${comment.description}</p>
                                       <div class="d-flex align-items-start">
                                       <div class="flex-grow-1 d-flex justify-content-between">
                                        <h5 class="font-size-13 mb-0">${comment.user.email}</h5>
@@ -372,9 +376,9 @@
                                     }
                                     </style>
                                     `;
-                    }
-                    $("#comments").html(commentsText);
-                    $("#newComment").val(""); 
+                        }
+                        $("#comments").html(commentsText);
+                    
                 },
                 error: function (err) {
                     console.error("Yorum eklenirken hata oluştu:", err);
