--- a/IsEmirleri.Web/Views/Mission/Index.cshtml
+++ b/IsEmirleri.Web/Views/Mission/Index.cshtml
@@ -146,22 +146,8 @@
         </div>
     </div>
 </div>
-<div class="mt-4">
-    <h5 class="font-size-14 mb-3">Reviews : </h5>
-    <div class="border p-4 rounded">
-        <div class="border-bottom pb-3">
-            <p class="float-sm-end text-muted font-size-13">12 July, 2020</p>
-            <div class="badge bg-success mb-2"><i class="mdi mdi-star"></i> 4.1</div>
-            <p class="text-muted mb-4">It will be as simple as in fact, it will be Occidental. It will seem like simplified</p>
-            <div class="d-flex align-items-start">
-                <div class="flex-grow-1">
-                    <h5 class="font-size-15 mb-0">Samuel</h5>
-                </div>
-            </div>
 
-        </div>
-    </div>
-</div>
+
 @section Scripts {
     <script>
         var DataTable = "";
@@ -335,13 +321,14 @@
         // function formatDuration(duration) {
         //     return duration; // Uygun formatlama ekleyin
         // }
-        $("#btnAddComment").click(function () {
+        $("#btnAddComment").off().click(function () {
             let missionId = $("#modalDetail").data('missionId'); 
             let comment = {
                 description: $("#newComment").val(),
                 taskId: missionId,
             }
-            $.ajax({
+            if($("#newComment").val().length>0){
+                $.ajax({
                 url: '/Comment/Add',
                 type: 'POST',
                 contentType: 'application/json',
@@ -386,6 +373,10 @@
                     console.error("Yorum eklenirken hata oluştu:", err);
                 }
             });
+            }else{
+                toastr.error("Lütfen yorum yazınız.")
+            }
+            
         });
         $("#btnAdd").click(function () {
             $("#modalAdd").modal("show");
@@ -398,17 +389,15 @@
             fillProjects();
             fillStatuses();
 
-            $("#btnSave").text("Kaydet").off().click(() => {
-                let data = {
-                    mission: {
-
+            $("#btnSave").text("Kaydet").off().click(()=> {
+                let mission = {
+                        
                         title: $("#txtTitle").val(),
                         description: $("#txtDescription").val(),
                         // fileId: $("#ddlFiles").val(),
                         priorityId: $("#ddlPriorities").val(),
                         statusId: $("#ddlStatuses").val(),
                         projectId: $("#ddlProjects").val(),
-                        userId: $("#ddlUsers").val(),
                         endDate:$("#txtEndDate").val()
 
                     }
@@ -425,7 +414,7 @@
                     success: function (res) {
                         $("#modalAdd").modal("hide");
                         res.project = { name: $("#ddlProjects option:selected").text() };
-
+                        res.status = { name: $("#ddlStatuses option:selected").text() };
                         res.priority = { name: $("#ddlPriorities option:selected").text() };
                         DataTable.row.add(res).draw();
                         toastr.success("Görev Başarıyla Oluşturuldu");
