--- a/IsEmirleri.Web/Views/Priority/Index.cshtml
+++ b/IsEmirleri.Web/Views/Priority/Index.cshtml
@@ -76,7 +76,7 @@
 
                         let data = {
                             priority: {
-                                name: $("#txtPriorityname").val(),
+                                name: $("#txtPriorityname").val()
 
 
                             }
